--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "cpy": "^3.4.1",
     "cpy-cli": "^2.0.0",
-    "css-loader": "0.24.0",
+    "css-loader": "^3.2.0",
     "eslint": "^5.0.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
@@ -45,9 +45,9 @@
     "style-loader": "0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.1",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
@@ -60,7 +60,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/primetwig/react-nestable"
+    "url": "https://github.com/castroCrea/react-nestable"
   },
   "keywords": [
     "react",
